--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+    compile('org.springframework.boot:spring-boot-starter-web')
+    testCompile('junit:junit:4.13')
+    testCompile('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
 }
