--- a/kodilla-testing/build.gradle
+++ b/kodilla-testing/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'idea'
 }
 
 group 'com.kodilla'
@@ -13,4 +14,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.13'
+    testCompile ('org.mockito:mockito-all:1.10.19')
+
 }
