--- a/kodilla-testing/build.gradle
+++ b/kodilla-testing/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.13'
+    testCompile('junit:junit:4.13')
     testCompile ('org.mockito:mockito-all:1.10.19')
 
 }
