--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile('junit:junit:4.13')
-    testCompile('org.springframework.boot:spring-boot-starter-test') {
+    testImplementation('junit:junit:4.13')
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
 }
