--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'kodilla-course'
 include 'kodilla-testing'
 include 'number-generator'
 include 'kodilla-stream'
+include 'kodilla-rps'
 
