--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,12 @@ include 'number-generator'
 include 'kodilla-stream'
 include 'kodilla-rps'
 include 'kodilla-exception'
+include 'extra-task'
+include 'kodilla-good-patterns'
+include 'kodilla-good-patterns'
+include 'untitled'
+include 'kodilla-good-patternss'
+include 'kodilla-good-patterns'
+include 'kodilla-good-patterns'
+include 'kodilla-good-patterns'
 
