--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,6 @@ include 'kodilla-good-patternss'
 include 'kodilla-good-patterns'
 include 'kodilla-good-patterns'
 include 'kodilla-good-patterns'
+include 'kodilla-spring-intro'
+include 'kodilla-spring'
 
