--- a/settings.gradle
+++ b/settings.gradle
@@ -6,12 +6,6 @@ include 'kodilla-rps'
 include 'kodilla-exception'
 include 'extra-task'
 include 'kodilla-good-patterns'
-include 'kodilla-good-patterns'
-include 'untitled'
-include 'kodilla-good-patternss'
-include 'kodilla-good-patterns'
-include 'kodilla-good-patterns'
-include 'kodilla-good-patterns'
 include 'kodilla-spring-intro'
 include 'kodilla-spring'
-
+include 'kodilla-spring-web'
