--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,6 @@ include 'kodilla-spring-web'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-hibernate'
+include 'kodilla-patterns2'
+
 
