--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-hibernate'
 include 'kodilla-patterns2'
-
+include 'kodilla-testing2'
 
